# Sakura

./: CMakeLists.txt  README.md  \
CORE/APU_2A03/: wrapper.h
CORE/BUS/: bus.cpp  bus.h
CORE/CART/: cart.cpp  cart.h
CORE/CPU_6502/: addressing_modes.cpp  core.cpp  core.h  opcodes.cpp
CORE/MAPPERS/: mapper.h  mapper4.cpp
CORE/PPU_2C02/: core_ppu.cpp  core_ppu.h
MAIN/: main.cpp  main.h  render.cpp  render.h  sakura.h
UI/: Program.cs  Resources.ja.resx  Resources.resx  Rom.cs  SakuraUI.cs  Settings.cs  UI.csproj  cfg.json  log.txt
UI/frameviews/: RomListView.cs  SettingsView.cs
UI/helpers/: ASCII.cs  Controls.cs  CoreWrapper.cs
core/Bus/: bus.cpp  bus.h
core/CPU_6502/: addressing_modes.cpp  core.h
